update rl config

--- a/rl.toml
+++ b/rl.toml
@@ -1,20 +1,20 @@
 inference_gpu_ids = [0,1,2,3,4,5]
 trainer_gpu_ids = [6,7]
 
-max_steps = 100
+max_steps = 5
+seq_len = 4096
 
 [wandb]
 project = "hanabi-rl"
 name = "hanabi-rl"
 
-[ckpt] # Checkpoint at the end of training
+[ckpt]
 
 [model]
 name = "nph4rd/Qwen3-4B-Instruct-2507-Hanabi-SFT"
 
 [orchestrator]
-seq_len = 8192
-batch_size = 512
+batch_size = 32
 rollouts_per_example = 16
 trajectory_strategy = "branching"
 
@@ -23,10 +23,10 @@ id = "nph4rd/hanabi"
 name = "hanabi"
 
 [orchestrator.sampling]
-max_tokens = 256
+max_tokens = 128
 
-[trainer] # Default trainer config
+[trainer]
 
-[inference.parallel]
-dp = 6
-tp = 1
+[inference.model]
+enable_auto_tool_choice = true
+tool_call_parser = "hermes"
